name:                sdl2-ttf
version:             0.1.0.0
synopsis:            Support for SDL2_ttf library.
license:             PublicDomain
license-file:        LICENSE
author:              Joshua DeSeno
maintainer:          jdeseno@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
description:         
  FFI Bindings for the SDL2_ttf SDL extension.
  See https://www.libsdl.org/projects/SDL_ttf/ for details.

library
  default-language: Haskell2010
  default-extensions:
    CPP,
    EmptyDataDecls,
    ForeignFunctionInterface
  includes:
    SDL.h,
    SDL_ttf.h
  pkgconfig-depends:
    sdl2 >= 2.0.0,
    SDL2_ttf >= 2.0.0
  build-depends:
    base >=4,
    SDL2
  exposed-modules:
    Graphics.UI.SDL.TTF
